# neaters

./: Cargo.toml  LICENSE  README.md
.github/workflows/: workflow.yml
src/: config.rs  lib.rs  neuralnetwork.rs  phenotype.rs  solver.rs  species.rs  tests.rs
