[package]
name = "neaters"
version = "0.1.0"
edition = "2021"
authors = ["TecTrixer <tonihoevedes@gmail.com"]
description = "NEATeRS is a library for training a genetic neural net through reinforcement learning."
repository = "https://github.com/tectrixer/neaters/"
license = "MIT"
keywords = ["neuralnetwork", "neat", "genetic", "reinforcement", "ai"]
categories = ["science", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: decide on a semver strategie: fixed or open to updates?
bincode = "1.3.3"
serde = {version = "1.0.136", features = ["derive"]}

[dev-dependencies]
tempfile = "3.3.0"
